--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
         <script src="src/makeChart.js"></script>
         <button onclick="makeChart()">차트 생성</button>
     </div>
-    <div class="chart">
+    <div class="chart" style="display: none;">
+        <div class="chart-top">
+            <img class="logo-img" src="src/img/ddr-logo.png">
+            <img class="logo-char1" src="src/img/ddr-char1.png">
+            <img class="logo-char2" src="src/img/ddr-char2.png">
+            <img class="logo-bg" src="src/img/ddr-bg.png">
+            <img class="logo-bg-bottom" src="src/img/ddr-bg-bottom.png">
+        </div>
+
         <div class="chart-classic">
 
         </div>
