--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
             <img class="logo-char2" src="src/img/ddr-char2.png">
             <img class="logo-bg" src="src/img/ddr-bg.png">
             <img class="logo-bg-bottom" src="src/img/ddr-bg-bottom.png">
+            <div class="user-data">
+                <h1 class="dancer-name"></h1>
+                <h1 class="ddr-code"></h1>
+                <h1 class="user-rating"></h1>
+                <h1 class="user-tier"></h1>
+            </div>
         </div>
 
         <div class="chart-classic">
